[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["full"] }
pretty_env_logger = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }

[build-dependencies]
tonic-build = "0.5"
