[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ecurtin2 <ecurtin2@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
betterproto = "2.0.0b3"
grpclib = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^21.4b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
