[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend service for storing recipes"
authors = ["me"]

[tool.poetry.dependencies]
python = "^3.9"
betterproto = "2.0.0b3"


[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "isort"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
